--- a/src/views/products/productEdit.ejs
+++ b/src/views/products/productEdit.ejs
@@ -24,29 +24,24 @@
                 <input type="file" name="image" />
             </div>
             <div>
-                <label for="gender" class="negrita">Genero</label>
+                <label for="genre" class="negrita">Genero</label>
                 <br>
-                <input type="radio" name="gender" id="gender" value="male"
-                    <%= producto.gender==="male" ? "checked":null %> />Masculino
-                <input type="radio" name="gender" id="gender" value="female"
-                    <%= producto.gender==="female" ? "checked":null %> />Femenino
-                <input type="radio" name="gender" id="gender" value="kids"
-                    <%= producto.gender==="kids" ? "checked":null %> />Niños
+                <% genres.forEach(genre => { %>
+                <input type="radio" name="genre" id="genre" value="<%= genre.id %>"
+                    <%= genre.id === producto.genre_id ? "checked":null %>><%= genre.name %>
+                <% }) %>
             </div>
+
             <div class="control-formulario1">
-                <label for="mark">Marca</label>
-                <select name="mark" id="mark">
-                    <option value="">Elegí</option>
-                    <option name="mark" value="nike" <%= producto.mark=="nike" ? "selected" : null%>>Nike</option>
-                    <option name="mark" value="adidas" <%= producto.mark==="adidas"? "selected":null %>>Adidas</option>
-                    <option name="mark" value="puma" <%= producto.mark==="puma" ? "selected":null %>>Puma</option>
-                    <option name="mark" value="vans" <%= producto.mark==="vans" ? "selected":null %>>Vans</option>
-                    <option name="mark" value="new-balance" <%= producto.mark==="new-balance" ? "selected":null %>>New
-                        Balance</option>
-                    <option name="mark" value="converse" <%= producto.mark==="converse" ? "selected":null %>>Converse
-                    </option>
+                <label for="brand">Marca</label>
+                <select name="brand" id="brand">
+                    <% brands.forEach(brand => { %>
+                    <option value="<%= brand.id %>" <%= brand.id==producto.brands_id ? "selected" : null%>>
+                        <%= brand.name %> </option>
+                    <% }) %>
                 </select>
             </div>
+
             <div>
                 <label for="size" class="negrita">Talles:</label>
                 <br>
@@ -71,31 +66,41 @@
                 <input type="checkbox" name="size" id="size" value="46"
                     <%= producto.size.includes("46") ? "checked":" " %> />46
             </div>
+
             <div class="control-formulario1">
-                <label for="colors" class="negrita">Color del producto: <input type="color" value="<%=producto.colors%>"
-                        name="colors" id="colors" /></label>
+                <label for="colors" class="form-label">Color del producto:</label>
+                <select name="colors" id="colors" class="form-input">
+                    <% colors.forEach(color => { %>
+                    <option value="<%= color.id %>" <%= color.id==producto.colors_id ? "selected" : null%>>
+                        <%= color.name %> </option>
+                    <% }) %>
+                </select>
             </div>
+
             <div class="control-formulario1">
                 <label for="category" class="form-label">Categoría:</label>
                 <select name="category" id="category" class="form-input">
-                    <option value="">Elegí</option>
-                    <option value="in-sale" <%=producto.category==="in-sale"?"selected":null%>>En oferta</option>
-                    <option value="visited" <%=producto.category==="visited"?"selected":null%>>Últimos agregados
-                    </option>
-                    <option value="destacados" <%=producto.category==="destacados"?"selected":null%>>Destacados</option>
+                    <% categories.forEach(category => { %>
+                    <option value="<%= category.id %>" <%= category.id==producto.category_id ? "selected" : null%>>
+                        <%= category.name %> </option>
+                    <% }) %>
                 </select>
             </div>
+
             <div class="control-formulario1">
                 <label for="price">Precio:</label>
                 <input type="number" name="price" value="<%=producto.price%>" id="price" placeholder="$9999"
                     class="control1" required />
             </div>
+
             <div class="control-formulario1">
                 <label for="discount">Descuento:</label>
                 <input type="number" name="discount" value="<%=producto.discount%>" id="discount" placeholder="15"
                     class="control1" />
             </div>
+
             <br />
+
             <div class="register-buttons">
                 <button type="submit" value="Confirmar" class="confirm-button">Confirmar</button>
                 <button type="reset" value="Borrar" class="delete-button">Borrar</button>
