--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -25,7 +25,7 @@
                 <a href="/users/edit"><button type="button"
                         class="button-edit">EDITAR</button></a>
 
-                <form action="/users/<%=user.id %>?_method=DELETE" method="POST" style="display: inline-flex">
+                <form action="/users/delete/<%=user.id %>?_method=DELETE" method="POST" style="display: inline-flex">
                     <button type="submit" class="button-edit button-delete">ELIMINAR</button>
                 </form>
 
