--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -17,71 +17,73 @@
             </ol>
         </div>
 
-        <section class="main-article-product">
+        <form action="/products/productCart " method="POST">
+            <section class="main-article-product">
 
-
-            <div class="imagen-principal">
-                <img src=<%="/images/products/"+producto.image %> width="100%" alt=<%=producto.name%>
-                    class="main-product-image">
-            </div>
-
-            <div class="data-principal">
-                <div class="product-body">
-                    <h2 class="main-title"><%=producto.name%></h2>
-                    <% if (producto.discount) { %>
-                    <p class="precio-pd small-detail">
-                        <span>$<%= toThousand(producto.price) %></span>
-                        /
-                        <b><%= producto.discount%>% OFF</b>
-                    </p>
-                    <p class="precio-pd">
-                        $<%= toThousand(producto.price - (producto.price*producto.discount/100)) %>
-                    </p>
-                    <% } else { %>
-                    <p class="precio-pd">
-                        $<%= toThousand(producto.price) %>
-                    </p>
-                    <% } %>
-
-                    <h3 class="talle">Seleccioná tu talle</h3>
-                    <div class="talle1">
-                        <form action="/talle" class="tallesdisponibles">
-                            <% for( let i = 0; i < size.length; i++ ) { %>
-                            <input type="button" name="talle" value="<%=size[i]%>" class="boton-talle">
-                            <% } %>
-                        </form>
-                        <p class="guia-talles"><a href=# class="cfont-talles"><i class="fas fa-ruler-horizontal"></i>
-                                Guía de talles</a></p>
-                    </div>
-                    <div class="cantidad1">
-                        <p class="cantidad-titulo">Cantidad:</p>
-                        <form action="/cantidad" class="cantidaditem">
-                            <select name="cantidad">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                            </select>
-                        </form>
-                    </div>
-                    <div class="realizar-compra">
-                        <a href="productCart" class="boton-de-compra">Comprar <i class="fas fa-shopping-basket"></i></a>
-                    </div>
-
-                    <a href="/products/<%= producto.id %>/edit"><button type="button"
-                            class="button-edit">EDITAR</button></a>
-
-
-                    <form action="/products/<%=producto.id %>?_method=DELETE" method="POST"
-                        style="display: inline-flex">
-                        <button type="submit" class="button-edit button-delete">ELIMINAR</button>
-                    </form>
-
-                    <div class="enviosgratis">
-                        <p class="envios1"><i class="fas fa-shipping-fast"></i>¡ENVIOS SIN CARGO A TODO EL PAÍS!</p>
-                    </div>
+                <div class="imagen-principal">
+                    <img src=<%="/images/products/"+producto.image %> width="100%" alt=<%=producto.name%>
+                        class="main-product-image">
                 </div>
+
+                <div class="data-principal">
+                    <div class="product-body">
+                        <h2 class="main-title"><%=producto.name%></h2>
+                        <% if (producto.discount) { %>
+                        <p class="precio-pd small-detail">
+                            <span>$<%= toThousand(producto.price) %></span>
+                            /
+                            <b><%= producto.discount%>% OFF</b>
+                        </p>
+                        <p class="precio-pd">
+                            $<%= toThousand(producto.price - (producto.price*producto.discount/100)) %>
+                        </p>
+                        <% } else { %>
+                        <p class="precio-pd">
+                            $<%= toThousand(producto.price) %>
+                        </p>
+                        <% } %>
+
+                        <h3 class="talle">Seleccioná tu talle</h3>
+                        <div class="talle1">
+                            <form action="/talle" class="tallesdisponibles">
+                                <% for( let i = 0; i < size.length; i++ ) { %>
+                                <%= size[i] %> <input type="radio" name="size" value="<%=size[i]%>"
+                                    class="boton-talle">
+                                <% } %>
+                            </form>
+                            <p class="guia-talles"><a href=# class="cfont-talles"><i
+                                        class="fas fa-ruler-horizontal"></i>
+                                    Guía de talles</a></p>
+                        </div>
+                        <div class="cantidad1">
+                            <p class="cantidad-titulo">Cantidad:</p>
+                            <form action="/cantidad" class="cantidaditem">
+                                <select name="amount">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                </select>
+                            </form>
+                        </div>
+                        <div class="realizar-compra">
+                            <button type="submit" value="Comprar" class="boton-de-compra">Comprar <i
+                                    class="fas fa-shopping-basket"></i></button>
+                        </div>
+        </form>
+
+        <a href="/products/<%= producto.id %>/edit"><button type="button" class="button-edit">EDITAR</button></a>
+
+
+        <form action="/products/<%=producto.id %>?_method=DELETE" method="POST" style="display: inline-flex">
+            <button type="submit" class="button-edit button-delete">ELIMINAR</button>
+        </form>
+
+        <div class="enviosgratis">
+            <p class="envios1"><i class="fas fa-shipping-fast"></i>¡ENVIOS SIN CARGO A TODO EL PAÍS!</p>
+        </div>
+        </div>
         </section>
 
         <h3 class="header-details">Detalles</h3>
