--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -48,6 +48,8 @@
                             <input type="number" name="price" class="oculto" value="<%=producto.price%>"></input>
                         <% } %>  
                             <input type="number" name="product_id" class="oculto" value="<%=producto.id%>"></input>
+             
+                            <input type="text" name="name" class="oculto" value="<%=producto.name%>"></input>
                       
 
                         <h3 class="talle">Seleccioná tu talle</h3>
@@ -77,7 +79,7 @@
                         </div>
                         <div class="realizar-compra">
                             <button type="submit" value="Comprar" class="boton-de-compra">Comprar <i
-                                    class="fas fa-shopping-basket"></i></button>
+                                class="fas fa-shopping-basket"></i></button>
                         </div>
         </form>
 
