--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -22,7 +22,7 @@
             <div class="icons-section">
                 <a href="/users/login"><i class="fas fa-user"></i></a>
                 <a href="/products/productCart"><i class="fas fa-shopping-cart"></i></a>
-                <a href="/"><i class="fas fa-share-alt-square"></i></a>
+                <!-- <a href="/"><i class="fas fa-share-alt-square"></i></a> -->
             </div>
 
             <%}%> 
