agregando mejoras a la vista de carrito, creacion de otra vista para usuarios no logueados

--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -7,7 +7,16 @@
     <%- include("../partials/header")%>
 
     <main>
-        <% let totalPrice = 0 %> <% if(userLogged){   %> <div class="encabezado-carrito">
+        <% if (userLogged&& listado.length==0) { %>
+         <h2>Tu carrito está vacio</h2>
+         <div class="register-buttons">
+         <a href="../products"> <button class="cart-button">Ver productos</button></a>
+         </div>
+         <br>
+        
+         <%}else if(userLogged){   %> 
+            <% let totalPrice = 0 %>
+            <div class="encabezado-carrito">
             <h3> MI CARRITO</h3>
             <a href="/products">ELEGIR MÁS PRODUCTOS</a>
         </div>
@@ -102,18 +111,7 @@
             </form>
         </div>
 
-        <% }else{  %>
-        <h2>Para acceder al carrito</h2>
-
-        <div class="register-buttons">
-            <a href="../users/login"> <button value="Confirmar" class="cart-button">Inicia sesion</button></a>
-            <a href="../users/register"><button value="Borrar" class="cart-button">Registrate</button></a>
-        </div>
-        <div class="center">
-            <img src="../images/kicks-bn.png" alt="Logo Kicks" class="logo-bn">
-        </div>
-
-        <br>
+        
         <% } %>
 
 
