--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -4,8 +4,20 @@
         </div>
         <div class="header-top-bar">
 
-            <div class="contenedor-menu">
+            <div class="contenedor-menu" id="contenedor-menu">
                 <i class="fas fa-bars menu-desplegable"></i>
+            </div>
+            <div class="menu-open" id="menu-open">
+                <ul class="open-list">
+                    <li><span class="menu-close" id="menu-close">x</span></li>
+                    <li><a href="/products" id="link-desplegable">PRODUCTOS</a></li>
+                    <li><a href="/products/productsMan" id="link-desplegable" >HOMBRE</a></li>
+                    <li><a href="/products/productsWoman" id="link-desplegable" >MUJER</a></li>
+                    <li><a href="/products/productsKids" id="link-desplegable" >NIÑOS</a></li>
+                    <li><a href="/products/productsMarks" id="link-desplegable">MARCAS</a></li>
+                    <li><img src="/images/kicks.png" alt=""></li>
+                </ul>
+
             </div>
             <a href="/" class="home"><img src="/images/kicks.png" alt="logo kicks" class="logo"></a>
 
@@ -46,5 +58,5 @@
             </ul>
 
         </nav>
-
+        <script src="/js/interacciones.js"></script>
     </header>
