--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -334,6 +334,74 @@ div.medios-pago{
     
 }
 
+.modal-container {
+    background-color: rgba(0, 0, 0, 95%);
+    box-shadow: 1px 1px 2px 2px rgb(0 0 0 / 30%);
+    color: white;
+    width: 60%;
+    padding: 0px 10px;
+    text-align: center;
+    position: fixed;
+    top: 5%;
+    right: 20%;
+    z-index: 100;
+    display: none;
+}
+
+.modal-container h3{
+width: 100%;
+margin-top: 10%;
+}
+.modal-container button{
+    
+    margin-top: 10%;
+    margin-bottom: 10%;
+}
+.menu-open{
+    background-color: black;
+    position: fixed;
+    z-index: 99;
+    top: 0px;
+    left: 0px;
+    width: 70%;
+    height: 100%;
+    display:none
+    
+}
+.menu-close{
+        font-size: 30px;
+        color: white;
+        text-align: right;
+        right: 20px;
+        top: 15px;
+        position: absolute;
+}
+.open-list{
+    list-style: none;
+    text-decoration: none;
+    margin-top: 50px;
+   
+}
+.open-list li{
+    list-style: none;
+    text-decoration: none;
+    margin-top: 40px;
+    margin-left: 30px;
+
+}
+.open-list li img{
+    width:40%;
+    margin: auto;
+
+}
+#link-desplegable{
+    color: #d97f11;
+    text-decoration: none;
+    font-size: 22px;
+    
+}
+
+
 /*MAIN LOGIN */
 .title{
     font-weight: 700;
@@ -1121,6 +1189,9 @@ div.italic {
     .contenedor-menu{
         display: none;
     }
+    .menu-open{
+        display: none;
+    }
     .icons-section{
         order:2;
         width: 10%;
@@ -1338,6 +1409,11 @@ div.italic {
         margin: 100px 0px;
         font-size: 25px;
     }
+    .modal-container{
+        width: 30%;
+        top: 5%;
+        right: 35%;
+    }
 }
 
 @media (min-width:950px){
@@ -1390,6 +1466,12 @@ div.italic {
         background-color: #d97f11;
     }
     .boton-login{
+        transition: background-color 1000ms;
+    }
+    .boton-suscribe:hover{
+        background-color: #d97f11;
+    }
+    .boton-suscribe{
         transition: background-color 1000ms;
     }
     .submit-button:hover{
